src/objects/Assessment_NF__c.object
<CustomObject>
    <fields>
        <fullName>Accomodation_Case_live__c</fullName>
        <label>Accomodation Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_Intervention_support__c</fullName>
        <label>Accomodation Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_Service_Name__c</fullName>
        <label>Accomodation Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_Service_OrganisationAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accomodation Service OrganisationAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Accomodation Service OrganisationAccount)</relationshipLabel>
        <relationshipName>Assessments_National_Framework6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accomodation_Service_Organisation_Phone__c</fullName>
        <formula>Accomodation_Service_OrganisationAccount__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accomodation Service Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_notes_on_alcohol_use__c</fullName>
        <label>Additional notes on alcohol use:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Client__r.MailingStreet &amp;  BR() &amp; 
Client__r.MailingCity &amp; &quot;, &quot; &amp; Client__r.MailingState &amp; &quot; &quot; &amp;
Client__r.MailingPostalCode &amp; BR()  &amp; 
Client__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Client__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_left_primary_secondary_school__c</fullName>
        <formula>Client__r.X12a_Age_left_primary_school__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age left primary/secondary school</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_services_involved_in_care_plan__c</fullName>
        <label>Alcohol services involved in care plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_barriers_to_work_e_g_literacy__c</fullName>
        <label>Any barriers to work? e.g. literacy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_dentistry_needs__c</fullName>
        <label>Any dentistry needs?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_difficulty_taking_your_medication__c</fullName>
        <inlineHelpText>Have you any difficulty in taking your prescribed medication?</inlineHelpText>
        <label>Any difficulty taking your medication?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_future_goals_longer_term_Alcohol__c</fullName>
        <label>Any future goals (longer term) Alcohol?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_illnesses_requires_attention__c</fullName>
        <inlineHelpText>Any operations / illnesses / disease that requires support / attention?</inlineHelpText>
        <label>Any illnesses requires attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_lessons_learned__c</fullName>
        <label>Any lessons learned?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_lessons_learned_thign_not_achieved__c</fullName>
        <label>Any lessons learned? thign not achieved</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_mental_health_diagnosis__c</fullName>
        <label>Any mental health diagnosis?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_needs_concerns_realted_to_family__c</fullName>
        <label>Any needs/concerns realted to family?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_needs_in_relation_to_disability__c</fullName>
        <label>Any needs in relation to disability?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_problems_in_school__c</fullName>
        <inlineHelpText>Literacy or learning difficulties / and related support needs?</inlineHelpText>
        <label>Any problems in school?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_there_any_new_needs_or_priorities_CP__c</fullName>
        <inlineHelpText>Once clarified these should be entered into the care plan.</inlineHelpText>
        <label>Are there any new needs or priorities?CP</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_of_origin__c</fullName>
        <label>Area of origin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_outcome__c</fullName>
        <label>Assessment outcome:</label>
        <picklist>
            <picklistValues>
                <fullName>Suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuitable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_risks_of_indirect_sharing__c</fullName>
        <inlineHelpText>Aware of risks of indirect sharing:
(sharing filters, spoons, water, front/backloading)</inlineHelpText>
        <label>Aware of risks of indirect sharing:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_in_more_different_social_support__c</fullName>
        <inlineHelpText>Would there be benefit in more or different social supports / social outlets / companionship etc
Detail Needs</inlineHelpText>
        <label>Benefit in more/different social support</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Care_Plan_review_what_has_been_achieved__c</fullName>
        <inlineHelpText>Since your last care plan review or assessment, what has been achieved what has gone well.</inlineHelpText>
        <label>Care Plan review what has been achieved?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Care_Plan_review_what_was_not_achived__c</fullName>
        <inlineHelpText>Since your last care plan review assessment, what has not been achieved or has not progressed?</inlineHelpText>
        <label>Care Plan review what was not achived?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_1_Age__c</fullName>
        <label>Child 1 Age:</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_1_Living_with__c</fullName>
        <label>Child 1 Living with:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_1_Name__c</fullName>
        <label>Child 1 Name:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2_Age__c</fullName>
        <label>Child 2 Age:</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_2_Living_with__c</fullName>
        <label>Child 2 Living with:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2_Name__c</fullName>
        <label>Child 2 Name:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_3_Age__c</fullName>
        <label>Child 3 Age:</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_3_Living_with__c</fullName>
        <label>Child 3 Living with:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_3_Name__c</fullName>
        <label>Child 3 Name:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessments (National Framework)</relationshipLabel>
        <relationshipName>Assessments_National_Framework</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consequences_of_alcohol_use__c</fullName>
        <inlineHelpText>Consequences of alcohol use – health social, economic, legal.  How is alcohol use funded ?</inlineHelpText>
        <label>Consequences of alcohol use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consequences_of_drug_use__c</fullName>
        <inlineHelpText>Consequences of alcohol/drug use: health, social, economic, legal.
Financial costs  and means of financing use.</inlineHelpText>
        <label>Consequences of drug use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_record_time_in_prison__c</fullName>
        <label>Criminal record, time in prison</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_bank_account__c</fullName>
        <label>Current bank account?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Objective_1_set__c</fullName>
        <label>Date Objective 1 set:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Objective_2_set__c</fullName>
        <label>Date Objective 2 set:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Objective_3_set__c</fullName>
        <label>Date Objective 3 set:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_assessment_criteria_fulfilled__c</fullName>
        <label>Date assessment criteria fulfilled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Assessment__c</fullName>
        <label>Date of Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Client__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_treatment_episodes__c</fullName>
        <inlineHelpText>Detail treatment episodes with specific detail of any in the last year.
If previously received methadone/opiate substitute, please specify age first received</inlineHelpText>
        <label>Detail treatment episodes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drug_1_Age_at_frist_use__c</fullName>
        <label>Drug 1 Age at first use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_1_Amount_used__c</fullName>
        <label>Drug 1 Amount used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_1_Discuss_harm_reduction_issues__c</fullName>
        <label>Drug 1 Discuss harm reduction issues</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_1_Harm_reduction_awareness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug 1 Harm reduction awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_2_Age_at_first_use__c</fullName>
        <label>Drug 2 Age at first use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_2_Amount_used__c</fullName>
        <label>Drug 2 Amount used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_2_Discuss_harm_reduction_issues__c</fullName>
        <label>Drug 2 Discuss harm reduction issues</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_2_Harm_reduction_awareness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug 2 Harm reduction awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_3_Age_at_first_use__c</fullName>
        <label>Drug 3 Age at first use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_3_Amount_used__c</fullName>
        <label>Drug 3 Amount used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_3_Discuss_harm_reduction_issues__c</fullName>
        <label>Drug 3 Discuss harm reduction issues</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_3_Harm_reduction_awareness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug 3 Harm reduction awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_4_Age_at_first_use__c</fullName>
        <label>Drug 4 Age at first use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_4_Harm_reduction_awarness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug 4 Harm reduction awarness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_type_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug type 1</label>
        <referenceTo>Drug_HRB__c</referenceTo>
        <relationshipLabel>Assessments (National Framework)</relationshipLabel>
        <relationshipName>Assessments_National_Framework</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug_type_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug type 2</label>
        <referenceTo>Drug_HRB__c</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Drug 2)</relationshipLabel>
        <relationshipName>Assessments_National_Framework1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug_type_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug type 3</label>
        <referenceTo>Drug_HRB__c</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Drug 3)</relationshipLabel>
        <relationshipName>Assessments_National_Framework2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug_use_risk_factors_plan_to_avoid_risk__c</fullName>
        <inlineHelpText>Drug use risk factors and plan to avoid risks:

What factors lead to greater risks in relation to drug use?
- Non compliance with medication?
- Alcohol drugs?
- Certain people?
- anniversaries?
- times of the year?</inlineHelpText>
        <label>Drug use risk factors/plan to avoid risk</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Service_Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Education Service Organisation Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Education Service Organisation Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_Service_Organisation_Phone__c</fullName>
        <formula>Education_Service_Organisation_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Service Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Training_Case_live__c</fullName>
        <label>Education/Training Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Training_Interests__c</fullName>
        <label>Education/Training Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education_Training_Intervention_support__c</fullName>
        <label>Education/Training Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Training_Service_Name__c</fullName>
        <label>Education/Training Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_and_training_Completed__c</fullName>
        <label>Education and training Completed</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Case_live__c</fullName>
        <label>Employment Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Interest__c</fullName>
        <label>Employment Interest?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Intervention_support__c</fullName>
        <label>Employment Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Service_Name__c</fullName>
        <label>Employment Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Service_Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment Service Organisation Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Employment Service Organisation Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Service_Organisation_Phone__c</fullName>
        <formula>Employment_Service_Organisation_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Service Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <formula>TEXT(Client__r.X11_Employement_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status_other__c</fullName>
        <formula>Client__r.X11_Employement_Status_other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Status other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_in_FAS_CE_programme__c</fullName>
        <label>Engagement in FAS CE programme?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_injected__c</fullName>
        <label>Ever injected:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_overdosed__c</fullName>
        <label>Ever overdosed:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_previously_treated_for_alcohol_use__c</fullName>
        <label>Ever previously treated for alcohol use</label>
        <picklist>
            <picklistValues>
                <fullName>Never treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_previously_treated_for_problem_drug__c</fullName>
        <label>Ever previously treated for problem drug</label>
        <picklist>
            <picklistValues>
                <fullName>Never treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_shared_injecting_equipment__c</fullName>
        <label>Ever shared injecting equipment:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Relationship_Case_live__c</fullName>
        <label>Family &amp; Relationship Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Relationship_Intervention_support__c</fullName>
        <label>Family/Relationship Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Relationship_Service_Name__c</fullName>
        <label>Family &amp; Relationship Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Service_Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Service Organisation Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Family Service Organisation Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Service_Organisation_Phone__c</fullName>
        <formula>Family_Service_Organisation_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Service Organisation Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_use_Drug_1__c</fullName>
        <label>Frequency of use Drug 1</label>
        <picklist>
            <picklistValues>
                <fullName>1. daily or almost daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. several times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. at least once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. less than once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_use_Drug_2__c</fullName>
        <label>Frequency of use Drug 2</label>
        <picklist>
            <picklistValues>
                <fullName>1. daily or almost daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. several times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. at least once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. less than once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_use_Drug_3__c</fullName>
        <label>Frequency of use Drug 3</label>
        <picklist>
            <picklistValues>
                <fullName>1. daily or almost daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. several times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. at least once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. less than once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Accomodation__c</fullName>
        <label>Goals: longer term - Accomodation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Education_Training__c</fullName>
        <label>Goals: longer term - Education/Training</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Employment__c</fullName>
        <label>Goals: longer term - Employment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Family_Relationship__c</fullName>
        <label>Goals: longer term - Family/Relationship</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Income_Financial__c</fullName>
        <label>Goals: longer term - Income/Financial</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Justice_Legal__c</fullName>
        <label>Goals: longer term - Justice/Legal</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Physical_Health__c</fullName>
        <label>Goals: longer term - Physical Health</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_longer_term_Social_Support__c</fullName>
        <label>Goals: longer term - Social/Support</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_you_been_screened_for_HIV__c</fullName>
        <label>Have you been screened for HIV?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_been_screened_for_Hep_C__c</fullName>
        <label>Have you been screened for Hep C?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_level_completed__c</fullName>
        <formula>TEXT(Client__r.X12b_Education_highest_level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest level completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_of_evictions__c</fullName>
        <label>History of evictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>History_of_service_involvement_leaving_A__c</fullName>
        <inlineHelpText>history of service involvement with reasons for leaving accommodation</inlineHelpText>
        <label>History of service involvement leaving A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hobbies_old_or_new__c</fullName>
        <label>Hobbies – old or new</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_drinks_per_occasion__c</fullName>
        <inlineHelpText>How many drinks were consumed over a typical drinking session over the past month? ……………..  (if none, put 0)</inlineHelpText>
        <label>How many drinks per occasion</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_will_progress_be_measured_O1__c</fullName>
        <label>How will progress be measured - O1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_progress_be_measured_O2__c</fullName>
        <label>How will progress be measured - O2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_progress_be_measured_O3__c</fullName>
        <label>How will progress be measured - O3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_homeless_is_enrolled_on_housing_list__c</fullName>
        <inlineHelpText>If homeless is enrolled on the housing list or with the local assessment and placement service?</inlineHelpText>
        <label>If homeless is enrolled on housing list?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_unsuitable_referred_to__c</fullName>
        <label>If unsuitable – referred to:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Financial_Case_live__c</fullName>
        <label>Income/Financial Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Financial_Intervention_support__c</fullName>
        <label>Income/Financial Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Financial_Service_Name__c</fullName>
        <inlineHelpText>CWO?
St Vincent De Paul?
MABS?</inlineHelpText>
        <label>Income/Financial Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Financial_Service_Org_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income/Financial Service Org. Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (National Framework) (Income/Financial Service Org. Name)</relationshipLabel>
        <relationshipName>Assessments_National_Framework7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_Financial_Service_Org_Phone__c</fullName>
        <formula>Income_Financial_Service_Org_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income/Financial Service Org. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injected_in_past_month__c</fullName>
        <label>Injected in past month:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_in_accessing_counselling__c</fullName>
        <label>Interest in accessing counselling?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justice_Legal_Case_live__c</fullName>
        <label>Justice/Legal Case live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justice_Legal_Intervention_support__c</fullName>
        <label>Justice/Legal Intervention/support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justice_Legal_Service_Name__c</fullName>
        <inlineHelpText>Services currently involved or which have been involved
Probation officer?
Solicitor?</inlineHelpText>
        <label>Justice/Legal Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>